# neurofabric

./: .claudeignore  .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  README_CN.md  README_EN.md
apps/: CMakeLists.txt  nf_generate.cpp  nf_node_cli.cpp  nf_serve.cpp
core/: CMakeLists.txt
core/include/neuralOS/compiler/: compiler_pipeline.hpp  cse_pass.hpp  dag_to_nfir.hpp  dce_pass.hpp  fusion_pass.hpp  memory_plan_pass.hpp  nfir.hpp  nfir_annotate.hpp  nfir_high.hpp  nfir_low.hpp  shape_inference_pass.hpp
core/include/neuralOS/ddi/: ddi.hpp  neuro_buffer_abi.h  neuro_ddi.h  neuro_fabric_abi.h  neuro_scheduler_abi.h
core/include/neuralOS/driver/: driver_registry.hpp
core/include/neuralOS/kernel/: BatchInferenceLoop.hpp  CFS.hpp  ContextHub.hpp  GraphBuilder.hpp  NeuralOSRuntime.hpp  PipelineEngine.hpp  ProfileTrace.hpp  SpecEngine.hpp  TensorView.hpp  VirtualBus.hpp  kv_cache.hpp  request_scheduler.hpp  vMMU.hpp
core/include/neuralOS/mesh/: async_dataflow.hpp  cxl_memory.hpp  kv_migration.hpp  mesh_coordinator.hpp  topology.hpp
core/include/neurofabric/: ContextHub.hpp  GraphBuilder.hpp  PipelineEngine.hpp  TensorView.hpp  metrics.h  neuro_buffer_abi.h  neuro_fabric_abi.h  neuro_ir_format.h  neuro_network_protocol.h  neuro_scheduler_abi.h  nf_c_api.h
core/include/neurofabric/engine/: ContextHub.hpp  GraphBuilder.hpp  PipelineEngine.hpp  ProfileTrace.hpp  TensorView.hpp
core/src/: context.cpp  dag.cpp  metrics.cpp  plugin_loader.cpp
core/src/api/: CMakeLists.txt  nf_c_api.cpp
core/src/graph/: GraphBuilder.cpp  mmap_buffer.cpp  mmap_buffer.h
core/src/platform/: dl_posix.cpp  dl_win32.cpp  plugin_loader_internal.h
examples/: CMakeLists.txt
model/: CMakeLists.txt
model/model/: arch_registry.hpp  chat_template.hpp  gguf_loader.hpp  llama_dag_builder.hpp  model_config.hpp  quant_registry.hpp
model/nf_compiler/: gguf_parser.py  test_export.py
model/nf_compiler/onnx/: onnx_op_map.hpp  onnx_parser.hpp  onnx_to_nfir.hpp
plugins/cuda/: CMakeLists.txt
plugins/cuda/src/: cuda_provider.cpp
plugins/metal/: CMakeLists.txt
plugins/metal/src/: metal_provider.cpp  metal_provider.mm  metal_pso_registry.h
plugins/network/: CMakeLists.txt
plugins/network/src/: network_provider.cpp  payload_serializer.cpp  payload_serializer.h  rdma_transport.hpp
plugins/rknn/: CMakeLists.txt
plugins/rknn/src/: rknn_provider.cpp
python/: neuralos.py  (+3 more)
tests/: CMakeLists.txt  arch_registry_test.cpp  batch_scheduler_test.cpp  benchmark_kernels.cpp  buffer_test.cpp  chrome_trace_test.cpp  context_hub_test.cpp  dag_inference_test.cpp  dequant_test.cpp  e2e_pipeline_test.cpp  fp16_e2e_test.cpp  fp16_kernel_test.cpp  fused_matmul_test.cpp  fused_warmup_test.cpp  gqa_attention_test.cpp  ir_loader_test.cpp  kquant_dequant_test.cpp  kv_cache_policy_test.cpp  matmul_bench_test.cpp  mistral_arch_test.cpp  model_config_test.cpp  multi_layer_test.cpp  nfir_e2e_test.cpp  paged_attn_test.cpp  paged_kv_test.cpp  phi3_arch_test.cpp  profiling_test.cpp  pso_registry_test.cpp  push_constants_test.cpp  qwen2_arch_test.cpp  real_model_test.cpp  rknn_silicon_test.cpp  scheduler_test.cpp  session_test.cpp  silicon_test.cpp  sliding_window_test.cpp  smoke_test.cpp  speculative_decode_test.cpp  split_inference_test.cpp  split_llama_mock_test.cpp  (+3 more)
tests/compiler/: app_compiler_test.cpp  chain_fusion_test.cpp  compiler_pipeline_test.cpp  cse_pass_test.cpp  dag_to_nfir_test.cpp  dce_pass_test.cpp  fusion_pass_test.cpp  memory_plan_test.cpp  nfir_annotate_test.cpp  nfir_multilevel_test.cpp  onnx_e2e_test.cpp  onnx_parser_test.cpp  shape_inference_test.cpp
tests/ddi/: buffer_test.cpp  ddi_async_test.cpp  ddi_pipeline_async_test.cpp  e2e_pipeline_test.cpp  ir_loader_test.cpp  nfir_e2e_test.cpp  smoke_test.cpp  split_inference_test.cpp  split_llama_mock_test.cpp  streaming_callback_test.cpp
tests/driver/: benchmark_kernels.cpp  cuda_stub_test.cpp  dag_inference_test.cpp  dequant_test.cpp  driver_registry_populate_test.cpp  fp16_e2e_test.cpp  fp16_kernel_test.cpp  fused_matmul_test.cpp  fused_warmup_test.cpp  gqa_attention_test.cpp  kquant_dequant_test.cpp  matmul_bench_test.cpp  multi_layer_test.cpp  paged_attn_test.cpp  real_model_test.cpp  rknn_silicon_test.cpp  silicon_test.cpp  sliding_window_test.cpp  transformer_test.cpp  transport_abstraction_test.cpp
tests/kernel/: batch_loop_pressure_test.cpp  batch_loop_test.cpp  batch_scheduler_test.cpp  cfs_migration_test.cpp  cfs_preempt_test.cpp  cfs_vmmu_integration_test.cpp  cfs_vtc_test.cpp  context_hub_test.cpp  e2e_neuralOS_test.cpp  generate_neuralOS_test.cpp  moe_routing_test.cpp  paged_kv_test.cpp  profiling_test.cpp  push_constants_test.cpp  runtime_basic_test.cpp  runtime_prefix_test.cpp  runtime_pressure_test.cpp  runtime_spec_test.cpp  scheduler_test.cpp  serve_neuralOS_test.cpp  session_test.cpp  spec_rollback_test.cpp  spec_tree_test.cpp  spec_vmmu_integration_test.cpp  speculative_decode_test.cpp  virtual_bus_test.cpp  vmmu_cow_test.cpp  vmmu_pageout_test.cpp  vmmu_radix_share_test.cpp
tests/mesh/: async_dataflow_test.cpp  cxl_memory_test.cpp  dataplane_transport_test.cpp  kv_migration_test.cpp  mesh_coordinator_test.cpp  mesh_e2e_test.cpp  rdma_tcp_transport_test.cpp  topology_routing_test.cpp
tests/model/: chrome_trace_test.cpp  gemma_arch_test.cpp  mistral_arch_test.cpp  mixtral_arch_test.cpp  model_config_test.cpp  phi3_arch_test.cpp  tokenizer_test.cpp
tools/: CMakeLists.txt  arch_registry.hpp  gguf_loader.hpp  llama_dag_builder.hpp  model_config.hpp  nf_bench.cpp  nf_generate.cpp  nf_node_cli.cpp  nf_serve.cpp  quant_registry.hpp  sampler.hpp  tokenizer.hpp  trace_export.hpp
tools/cross_compile/: build.sh  deploy.sh  prepare_sysroot.sh
tools/cross_compile/boards/: rpi4.conf
tools/cross_compile/devices/: rk3588.conf  rpi4.conf
tools/cross_compile/docker/: Dockerfile.rpi4
tools/cross_compile/lib/: common.sh
tools/cross_compile/toolchains/: aarch64-toolchain.cmake
tools/model/: arch_registry.hpp  kv_cache_policy.hpp  quant_registry.hpp
tools/nf_compiler/: ._gguf_parser.py  export_nfir.py
(+10 files in other folders)
