# ==================================================================
# NeuralOS — Model Layer: header-only model libraries
# ==================================================================

add_library(neuralOS_model INTERFACE)
target_include_directories(neuralOS_model INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
